@@ -43,7 +43,7 @@ from primaryobj import PrimaryObject
 from srcbase import SourceBase
 from notebase import NoteBase
 from mediabase import MediaBase
-from attributeBase import AttributeBase
+from attrbase import AttributeBase
 from eventref import EventRef
 from ldsordbase import LdsOrdBase
 from childref import ChildRef
